--- a/Stránka-1.css
+++ b/Stránka-1.css
@@ -45,6 +45,7 @@
 .u-section-2 .u-text-1 {
   font-family: Alata;
   font-weight: normal;
+  animation-duration: 750ms;
   margin: 25px 0 0;
 }
 
@@ -57,6 +58,7 @@
 .u-section-2 .u-text-2 {
   font-size: 1.125rem;
   font-style: normal;
+  animation-duration: 500ms;
   margin: 25px -127px 0;
 }
 
@@ -131,5 +133,227 @@
 
   .u-section-2 .u-line-1 {
     width: 50px;
+  }
+}.u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 474px;
+}
+
+.u-section-3 .u-text-1 {
+  width: 802px;
+  margin: 60px auto 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-weight: 300;
+  font-size: 1.25rem;
+  font-style: italic;
+  width: 802px;
+  margin: 15px auto 0;
+}
+
+.u-section-3 .u-layout-wrap-1 {
+  margin: 22px auto 60px 0;
+}
+
+.u-section-3 .u-layout-cell-1 {
+  min-height: 239px;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  text-shadow: 0 0 40px rgba(163,85,89,1);
+  margin: 28px 0 0;
+}
+
+.u-section-3 .u-text-4 {
+  font-weight: 300;
+  margin: 33px 0 0;
+}
+
+.u-section-3 .u-layout-cell-2 {
+  min-height: 239px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-5 {
+  font-size: 3.75rem;
+  font-weight: 300;
+  text-shadow: 0 0 40px rgba(163,85,89,0.9);
+  margin: 31px 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  font-weight: 300;
+  margin: 23px 0 0;
+}
+
+.u-section-3 .u-layout-cell-3 {
+  min-height: 239px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-7 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  text-shadow: 0 0 40px rgba(163,85,89,1);
+  margin: 28px 0 0;
+}
+
+.u-section-3 .u-text-8 {
+  font-weight: 300;
+  margin: 33px 0 0;
+}
+
+.u-section-3 .u-layout-cell-4 {
+  min-height: 239px;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-3 .u-text-9 {
+  font-size: 4.5rem;
+  font-weight: 300;
+  text-shadow: 0 0 40px rgba(163,85,89,1);
+  margin: 28px 3px 0 -3px;
+}
+
+.u-section-3 .u-text-10 {
+  font-weight: 300;
+  line-height: 1.3;
+  margin: 15px 0 -2px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 391px;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-weight: normal;
+  }
+
+  .u-section-3 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 197px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 197px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 197px;
+  }
+
+  .u-section-3 .u-layout-cell-4 {
+    min-height: 197px;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 299px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 720px;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 720px;
+  }
+
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-3 .u-layout-cell-4 {
+    min-height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 224px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 540px;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 141px;
+  }
+
+  .u-section-3 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 340px;
+  }
+
+  .u-section-3 .u-text-5 {
+    font-size: 4.5rem;
   }
 }
