--- a/index.css
+++ b/index.css
@@ -31659,6 +31659,7 @@ a.u-link.u-text-hover-grey-90:hover {
   margin-left: 0;
   background-image: none;
   min-height: 60px;
+  animation-duration: 1000ms;
 }
 
 .u-header .u-container-layout-1 {
@@ -31706,6 +31707,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-image-1 {
+  box-shadow: 2px 2px 15px 1px rgba(128,128,128,1);
+  animation-duration: 1000ms;
   margin: 35px auto 1px calc(((100% - 1140px) / 2));
 }
 
